...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="List" id="BYZ-38-t0r" customClass="ListViewController" customModule="schwablication" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ziX-uI-EBV" userLabel="Amount">
                                <rect key="frame" x="93" y="491" width="190" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="amountTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MYi-ER-TQW">
                                <rect key="frame" x="93" y="529" width="190" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                <rect key="frame" x="50" y="218" width="275" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="50" y="256" width="275" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="128" y="317" width="119" height="33"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="createAccountButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Create Account"/>
...
                        <outlet property="dateTextField" destination="olu-4j-ARn" id="TVz-VM-ZGc"/>
                        <outlet property="descTextField" destination="Bgy-9S-mNI" id="SiB-En-bJx"/>
                        <outlet property="descriptionTextField" destination="Bgy-9S-mNI" id="el2-Cc-5qV"/>
                        <outlet property="photoImaveView" destination="Mk6-BD-Q8m" id="4Fq-Nn-ayC"/>
                        <outlet property="scrollView" destination="yvh-md-60u" id="mLL-AY-kY5"/>
...
                                <rect key="frame" x="166" y="317" width="42" height="33"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Login"/>
...
                                <rect key="frame" x="108" y="358" width="158" height="33"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Create New Account"/>
...
