...
    
    /// Loading the application.
    /// Declaring the references for our database and model manager class.
    /// Loading data into the view
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "listView"
        refEntries = Database.database().reference().child("entries")
        entryManager = EntryManager(refEntries: self.refEntries)
        
         }
    
    /// Refreshing table content before view is appearing
...
