...
    var picker = UIImagePickerController()
    var didChange = false

    /// Downloading the image for the entry and replacing it with the
    /// loading.gif imageview when finished.
    override func viewDidLoad() {
        view.accessibilityIdentifier = "extendedView"
        photoHandler(iv: photoImaveView)
        if(entry?.photo != ""){
            photoImaveView.image = UIImage.gif(asset: "loading")
            ImageHelper().downloadImageByUrl(url: (entry?.photo)!, image: self.photoImaveView)
        }
        keyboardHandler()
...
