...
    var outDataEntry = PieChartDataEntry(value: 0.0)
    var inOutDataEntries = [PieChartDataEntry]()
    
    /// Loading the handler for the keyboard, getting references
    /// and loading data.
    override func viewDidLoad() {
        view.accessibilityIdentifier = "homeView"
        keyboardHandler()
        super.viewDidLoad()
        
        self.amountTextField.delegate = self
        self.titleTextField.delegate = self
        
...
